# libiconv-for-Windows

./: CMakeLists.txt
libiconv-1.16/: config.h
libiconv-1.16/include/: iconv.h
